[tool.poetry]
name = "aster-client"
version = "0.1.0"
description = ""
authors = ["eugeny <esshka@gmail.com>"]
readme = "README.md"
packages = [{include = "aster_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.13.2"
python-dotenv = "^1.2.1"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
aioresponses = ">=0.7.6"
pytest-mock = ">=3.14.0"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
